# grandeur

./: CMakeLists.txt  README.md  README.me  arena.py  board.cpp  board.h  card.cpp  card.h  config.cpp  config.h  constants.h  eval.cpp  eval.h  gamestats.R  gamestats.csv  gems.cpp  gems.h  greedy_player.cpp  greedy_player.h  logger.cpp  logger.h  main.cpp  mechanics.cpp  mechanics.h  minimax_player.cpp  minimax_player.h  move.cpp  move.h  move_notifier.cpp  move_notifier.h  noble.cpp  noble.h  player.cpp  player.h  random_player.cpp  random_player.h  text_player.cpp  text_player.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  testBoard.cpp  testCards.cpp  testEval.cpp  testGems.cpp
